--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -3,7 +3,8 @@
 {% block title %}Sign up{% endblock %}
 
 {% block footer %}
-    <script src="/js/hideShowPassword.min.js"></script>
+    <script src="/js/showHide.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
 
     <script>
         /**
@@ -57,11 +58,11 @@
 
             /**
               * Show password toggle button
-              */
-            $('#inputPassword').hideShowPassword({
+              */            
+			/*$('#inputPassword').hideShowPassword({
                 show: false,
                 innerToggle: 'focus'
-            });
+            });*/
         });
     </script>
 
@@ -83,19 +84,28 @@
     <form method="post" action="/signup/create" id="formSignup">
 
         <div>
-            <label for="inputName">Name</label>
+            <label for="inputName">Imię: </label>
             <input id="inputName" name="name" placeholder="Name" autofocus value="{{ user.name }}" required />
         </div>
         <div>
-            <label for="inputEmail">Email address</label>
+            <label for="inputEmail">Adres e-mail:</label>
             <input id="inputEmail" name="email" placeholder="email address" value="{{ user.email }}" required type="email" />
         </div>
         <div>
-            <label for="inputPassword">Password</label>
-            <input type="password" id="inputPassword" name="password" placeholder="Password" required />
+            <label for="inputPassword">Hasło:</label>
+            <input type="password" id="inputPassword" class="active" name="password" placeholder="Password" required />
+			<i id="icon" class="fa fa-eye-slash"></i>
         </div>
+		<div>
+			<label>
+				<input type="checkbox" name="terms">Akceptuję regulamin
+			</label>
+		</div>
+		<div>
+			<div class="g-recaptcha" data-sitekey="6LcFQAwbAAAAABDEIdPwu5QWsJGYuGXtNXVyS4qa"></div>
+		</div>
 
-        <button type="submit">Sign up</button>
+        <button type="submit">Zarejestruj się</button>
 
     </form>
 
