--- a/App/Views/Login/new.html
+++ b/App/Views/Login/new.html
@@ -9,15 +9,20 @@
     <form action="/login/create" method="post">
 
         <div>
-            <label for="inputEmail">Email address</label>
-            <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus />
+            <label for="inputEmail">Adres e-mail:</label>
+            <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus value="{{ email }}" />
         </div>
         <div>
-            <label for="inputPassword">Password</label>
+            <label for="inputPassword">Hasło:</label>
             <input type="password" id="inputPassword" name="password" placeholder="Password" />
         </div>
+		<div>
+			<label>
+				<input type="checkbox" name="remember_me" {% if remember_me %} checked="checked" {% endif %}>Pamiętaj mnie
+			</label>
+		</div>
 
-        <button type="submit">Log in</button>
+        <button type="submit">Zaloguj się</button>
 
     </form>
     
