--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -5,12 +5,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
+	<link rel="stylesheet" href="/css/styles.css" />
 	
 	<!--<script src="https://www.google.com/recaptcha/api.js"></script>-->
 	
 </head>
 <body>
-    {% block body %}
+    
+	{% for message in flash_messages %}
+        <div class="alert alert-{{ message.type }}">
+            {{ message.body }}
+        </div>
+    {% endfor %}
+	
+	{% block body %}
     {% endblock %}
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
