added new feature_adding_expense

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -10,7 +10,7 @@
 		Hello {{ current_user.username }}.		
 		
 		<p><a href="/income/new">Dodaj przychód</a>
-		<a href="/signup/new">Dodaj wydatek</a>
+		<a href="/expense/new">Dodaj wydatek</a>
 		<a href="/signup/new">Przeglądaj bilans</a>
 		<a href="/signup/new">Ustawienia</a>
 		<a href="/logout">Wyloguj</a></p>
