--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -11,7 +11,7 @@
 		
 		<p><a href="/income/new">Dodaj przychód</a>
 		<a href="/expense/new">Dodaj wydatek</a>
-		<a href="/signup/new">Przeglądaj bilans</a>
+		<a href="/balance/show">Przeglądaj bilans</a>
 		<a href="/signup/new">Ustawienia</a>
 		<a href="/logout">Wyloguj</a></p>
 	{% else %}
