--- a/App/Views/Settings/show.html
+++ b/App/Views/Settings/show.html
@@ -4,8 +4,8 @@
 
 {% block body %}
 
-    <h1>Settings</h1>
+    <h2>Ustawienia</h2>
 
-    <p>Available options</p>
+    <p>Coming soon!</p>
 
 {% endblock %}
