--- a/App/Views/Expense/new.html
+++ b/App/Views/Expense/new.html
@@ -4,8 +4,6 @@
 
 {% block body %}
 
-    <h1>Add Expense</h1>
-
     <form method="post" action="/expense/add" id="formAddexpense">
 		
 		<div>
@@ -14,14 +12,14 @@
 		</div>
 		<div>
 			<label for="inputDate">Data: </label>
-            <input type="date" name="date" value="{{ "now"|date("m/d/Y") }}" id="inputDate" required>
+            <input type="date" name="date" value="{{ today }}" id="inputDate" required>
 		</div>
 		<div>
 			<label for="payments">Sposób płatności:</label>		
 			<select id="payments" name="paymentsMethods" aria-label="Sposób płatności">
-				<option name="paymentOptions" value="Gotówka">Gotówka</option>
-				<option name="paymentOptions" value="Karta debetowa">Karta debetowa</option>
-				<option name="paymentOptions" value="Karta kredytowa">Karta kredytowa</option>
+				<option name="paymentOptions" value="{{ payments[0] }}">{{ payments[0] }}</option>
+				<option name="paymentOptions" value="{{ payments[1] }}">{{ payments[1] }}</option>
+				<option name="paymentOptions" value="{{ payments[2] }}">{{ payments[2] }}</option>
 			</select>							
 		</div>
 		
@@ -29,72 +27,72 @@
 			<legend>Kategoria:</legend>
 			<div>
 			  <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Jedzenie">
-				<label for="inlineRadio1">Jedzenie</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="{{ names[0] }}">
+				<label for="inlineRadio1">{{ names[0] }}</label>
 			  </div>
 			  <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Mieszkanie">
-				<label for="inlineRadio2">Mieszkanie</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="{{ names[1] }}">
+				<label for="inlineRadio2">{{ names[1] }}</label>
 			  </div>
 			  <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Transport">
-				<label for="inlineRadio3">Transport</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="{{ names[2] }}">
+				<label for="inlineRadio3">{{ names[2] }}</label>
 			  </div>
 			  <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio4" value="Telekomunikacja">
-				<label for="inlineRadio4">Telekomunikacja</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio4" value="{{ names[3] }}">
+				<label for="inlineRadio4">{{ names[3] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio5" value="Opieka zdrowotna">
-				<label for="inlineRadio5">Opieka zdrowotna</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio5" value="{{ names[4] }}">
+				<label for="inlineRadio5">{{ names[4] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio6" value="Ubranie">
-				<label for="inlineRadio6">Ubranie</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio6" value="{{ names[5] }}">
+				<label for="inlineRadio6">{{ names[5] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio7" value="Higiena">
-				<label for="inlineRadio7">Higiena</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio7" value="{{ names[6] }}">
+				<label for="inlineRadio7">{{ names[6] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio8" value="Dzieci">
-				<label for="inlineRadio8">Dzieci</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio8" value="{{ names[7] }}">
+				<label for="inlineRadio8">{{ names[7] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio9" value="Rozrywka">
-				<label for="inlineRadio9">Rozrywka</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio9" value="{{ names[8] }}">
+				<label for="inlineRadio9">{{ names[8] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio10" value="Wycieczka">
-				<label for="inlineRadio10">Wycieczka</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio10" value="{{ names[9] }}">
+				<label for="inlineRadio10">{{ names[9] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio11" value="Szkolenia">
-				<label for="inlineRadio11">Szkolenia</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio11" value="{{ names[10] }}">
+				<label for="inlineRadio11">{{ names[10] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio12" value="Książki">
-				<label for="inlineRadio12">Książki</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio12" value="{{ names[11] }}">
+				<label for="inlineRadio12">{{ names[11] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio13" value="Oszczędności">
-				<label for="inlineRadio13">Oszczędności</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio13" value="{{ names[12] }}">
+				<label for="inlineRadio13">{{ names[12] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio14" value="Na emeryturę">
-				<label for="inlineRadio14">Na emeryturę</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio14" value="{{ names[13] }}">
+				<label for="inlineRadio14">{{ names[13] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio15" value="Spłata długów">
-				<label for="inlineRadio15">Spłata długów</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio15" value="{{ names[14] }}">
+				<label for="inlineRadio15">{{ names[14] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio16" value="Darowizna">
-				<label for="inlineRadio16">Darowizna</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio16" value="{{ names[15] }}">
+				<label for="inlineRadio16">{{ names[15] }}</label>
 			  </div>
 			   <div>
-				<input type="radio" name="inlineRadioOptions" id="inlineRadio17" value="Inne">
-				<label for="inlineRadio17">Inne</label>
+				<input type="radio" name="inlineRadioOptions" id="inlineRadio17" value="{{ names[16] }}">
+				<label for="inlineRadio17">{{ names[16] }}</label>
 			  </div>
 			</div>
 		</fieldset>
