--- a/App/Views/Login/new.html
+++ b/App/Views/Login/new.html
@@ -4,19 +4,19 @@
 
 {% block body %}
 
-    <h1>Log in</h1>
+    <h2>Logowanie</h2>
 
     <form action="/login/create" method="post">
 
-        <div>
+        <div class="form-group">
             <label for="inputEmail">Adres e-mail:</label>
-            <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus value="{{ email }}" />
+            <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus value="{{ email }}" class="form-control">
         </div>
-        <div>
+        <div class="form-group">
             <label for="inputPassword">Hasło:</label>
-            <input type="password" id="inputPassword" name="password" placeholder="Password" />
+            <input type="password" id="inputPassword" name="password" placeholder="Password" class="form-control">
         </div>
-		<div>
+		<div class="checkbox">
 			<label>
 				<input type="checkbox" name="remember_me" {% if remember_me %} checked="checked" {% endif %}>Pamiętaj mnie
 			</label>
