--- a/App/Views/Signup/success.html
+++ b/App/Views/Signup/success.html
@@ -4,8 +4,7 @@
 
 {% block body %}
 
-    <h1>Sign up</h1>
-
-    <p>Success! Thank you for signing up.</p>
+    <p>Dziękujemy za rejestrację w serwisie!<br /><br />
+	<a href="/login/new">Zaloguj się na swoje konto!</a></p>
 
 {% endblock %}
