--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -1,30 +1,53 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>
-	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
-	<link rel="stylesheet" href="/css/styles.css" />
-	
-	<!--<script src="https://www.google.com/recaptcha/api.js"></script>-->
-	
-</head>
-<body>
-    
-	{% for message in flash_messages %}
-        <div class="alert alert-{{ message.type }}">
-            {{ message.body }}
-        </div>
-    {% endfor %}
-	
-	{% block body %}
-    {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<title>{% block title %}Budżetowiec - aplikacja internetowa do prowadzenia budżetu domowego{% endblock %}</title>
+		
+		<meta name="description" content="Moja pierwsza aplikacja internetowa">
+		<meta name="keywords" content="prowadzenie budżetu, domowy budżet, budżet, jak oszczędzać, oszczędzanie, finanse, kontrola wydatków, przychody, wydatki, bilans, bilans finansowy">
+		<meta name="author" content="Tomasz Nyćkowiak">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>	
+		<link rel="stylesheet" href="/css/fontello.css" type="text/css">
+		<link rel="stylesheet" href="/css/style.css" type="text/css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet">	
+		
+		
+	</head>
+	<body>
+		<div class="container">
+			<header>
+				<h1 class="mainHeader">Budżetowiec</h1>
+					{% if current_user %}							
+						<p><a href="/income/new">Dodaj przychód</a>
+						<a href="/expense/new">Dodaj wydatek</a>
+						<a href="/balance/show">Przeglądaj bilans</a>
+						<a href="/settings/show">Ustawienia</a>
+						<a href="/logout">Wyloguj</a></p>			
+					{% endif %}
+			</header>
+		
+			{% for message in flash_messages %}
+				<div class="alert alert-{{ message.type }}">
+					{{ message.body }}
+				</div>
+			{% endfor %}
+			
+			{% block body %}
+			{% endblock %}
+		</div>	
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>	
-
-    {% block footer %}
-    {% endblock %}
-</body>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+		
+		{% block footer %}
+		{% endblock %}
+	</body>
 </html>
